# constitutional-agent-governance

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  governance.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  gate_threshold_proposal.md  hard_constraint_proposal.md
.github/workflows/: publish.yml  tests.yml
checklist/: CONSTITUTIONAL_GOVERNANCE_CHECKLIST.md
docs/integrations/: crewai.md  langgraph.md  openai-agents-sdk.md
examples/: agenthustler_audit.md  basic_agent.py  governance.yaml
src/constitutional_agent/: __init__.py  __main__.py  constitution.py  fria.py  gates.py  hard_constraints.py  schema.py
tests/: test_constitution.py  test_fria.py  test_gates.py
