[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constitutional-agent"
version = "0.4.1"
description = "WHY-layer constitutional governance for autonomous AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ai", "agents", "governance", "constitutional", "llm", "autonomy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML>=6.0",
]

[project.scripts]
constitutional-agent = "constitutional_agent.__main__:main"

[project.urls]
Homepage = "https://github.com/CognitiveThoughtEngine/constitutional-agent-governance"
Documentation = "https://github.com/CognitiveThoughtEngine/constitutional-agent-governance#readme"
Repository = "https://github.com/CognitiveThoughtEngine/constitutional-agent-governance"
Issues = "https://github.com/CognitiveThoughtEngine/constitutional-agent-governance/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
